Update tools/cooja submodule
Update Dockerfile to only include GraalVM/Java17.

Commits:
e507ea37 Build Cooja as Java 17